# noodling

./: .cursorrules  .gitignore  NOTES.md  README.md  pyproject.toml
hash_map/: README.md  v2.py
hash_table /: README.md  bst.py
hit_counter/: test_v1.py  test_v2.py  v1.py
in_memory_SQL_db/: v1.py  v2.py
in_memory_kv/: NOTES.md  README.md  practice.py  test_v1.py  thread-safe_kv.py  timestamped_kv.py  v1.py  v2.py  v3.py  v4.py
lfu_cache/: README.md
log_storage_system/: README.md  v1.py
lru_cache/: README.md  __init__.py  basic_lru_cache.py  singleton_lru_cache.py
lru_cache/tests/: test_basic_lru_cache.py  test_singleton_lru_cache.py
memory_allocator/: v1.py
resuable_iterators/: bst_iterator.py  bst_iterator_v2.py  flatten_nested_list_iterator.py
script/: bootstrap  lint
src/0_basic/: 0_string_basic.py  11_stack_queue_basic.py  6_linkedlist_basic.py  6_trie_basic.py  8_graph_basic.py
src/2_recursion/: 100_same_tree.py  101_symmetric_tree.py  104_maximum_depth_of_binary_tree.py  110_balanced_binary_tree.py  112_path_sum.py  21_merge_two_sorted_lists.py  226_invert_binary_tree.py  231_power_of_two.py  235_lowest_common_ancestor_of_bst.py  257_binary_tree_paths.py  344_reverse_string.py  404_sum_of_left_leaves.py  509_fibonacci_number.py  543_diameter_of_binary_tree.py  70_climbing_stairs.py
src/3_monotonic_stack/: __init__.py
src/basic/: 10_set_algo.py  12_tuple_basic.py  1_string_algo.py  2_list_basic.py  3_list_algo.py  4_dict_basic.py  5_dict_algo.py  6_tree_basic.py  6_trie_basic.py  (+3 more)
web_crawler/: multithreaded_wc.py  v1.py  v2.py
(+107 files in other folders)
