[project]
name = "noodling"
version = "0.1.0"
description = "Collection of low-level data structure implementations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.0.0",
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lru_cache", "web_crawler"]

[tool.ruff]
exclude = ["src/basic/**"]
